--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -1,6 +1,8 @@
 \section{CrashSimulator Approach Details}
 
     %%% Verify information on supported trace formats %%%
+    %%% TODO: Assume all program are deterministic and will end. Unit test individual functions by putting in script
+    %%% TODO: Architecture section
     \subsection{System Call Traces}
 
         The first step in CrashSimulator's operation is to gather a trace of the system calls made by the application
