--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -192,15 +192,36 @@
 
     \subsection{Bugs Identified}
 
-    First, CrashSimulator was evaluated against NUMBER of popular tools with public bug trackers available. The goal was
-    to identify bugs from each tool's bug tracker (both fixed and unfixed) that are related to the faults that
-    CrashSimulator can inject. Next, CrashSimulator was run against these tools fault counts were collected. A
-    comparison of the number of faults identified by the tool's users in the tool's bug tracker to the number of faults
-    identified by CrashSimulator is presented in the table below.
+        A second way CrashSimulator was evaluated was on the basis of how well it was able to independently identify
+        known bugs that were listed in the bug tracking suites of two major open source projects. Firefox and Apache 2
+        were chosen because of their use in the previously discussed evaluations. The goal was to identify bugs from
+        each tool's bug tracker (both fixed and unfixed) that are related to the faults that CrashSimulator can inject
+        and determine whether or not CrashSimulator was able to identify them. As a side effect, this process also
+        yielded a number of new bugs that were previously unreported in these projects' bug trackers.
 
-    \emph{\textbf{INSERT TABLE HERE}}
+        \subsection{Firefox}
+
+        \subsection{Apache 2}
+
+       %  Next, CrashSimulator was run against these tools fault counts were collected. A comparison of the number of
+       %  faults identified by the tool's users in the tool's bug tracker to the number of faults identified by
+       %  CrashSimulator is presented in the table below.
+
+       %  Select potential anomaly, come up with search terms, search for bugs, choose candidates, run crash simulator,
+       %  determine if bugs were identified.
+
+       %  \emph{\textbf{INSERT TABLE HERE}}
+
+    \subsection{Test Coverage Improvement}
+
+        A final way CrashSimulator was evaluated was on the basis of how many ``unit tests'' it was able to add to the
+        existing test suites of open source applications that have test suites available.
 
     \subsection{Limitations}
+
+        Architecture stuff
+
+        Serialized tests for performance concerns
 
         Multi-threaded stuff is an issue for both NetCheck and CheckAPI
 
