Evaluation - Clean Up Comments

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -6,7 +6,7 @@
     mainstream applications.
 
 
-    %%%% Talk about the test platform, OS, Hardware, etc.
+    % TODO: Talk about the test platform, OS, Hardware, etc.
 
     \subsection{Execution Performance}
 
