--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -5,9 +5,7 @@
     the basis of execution performance and number of bugs detected across a set of small test programs and larger, more
     mainstream applications.
 
-
     % TODO: Talk about the test platform, OS, Hardware, etc.
-
     \subsection{Execution Performance}
 
         One key attribute of successful testing tools is that they be able to complete their tests in a timely manner.
@@ -199,8 +197,10 @@
         and determine whether or not CrashSimulator was able to identify them. As a side effect, this process also
         yielded a number of new bugs that were previously unreported in these projects' bug trackers.
 
+        % TODO: complete
         \subsection{Firefox}
 
+        % TODO: complete
         \subsection{Apache 2}
 
        %  Next, CrashSimulator was run against these tools fault counts were collected. A comparison of the number of
