--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -1,3 +1,4 @@
+% TODO: Re-read and rework
 \section{Background and Motivation}
 
     %%This sentence is very similar to the one from the Sniper paper
