--- a/CSConclusion.tex
+++ b/CSConclusion.tex
@@ -1,3 +1,4 @@
+% TODO: Re-read and rework
 \section{Conclusion}
 
     Minimizing the number of faults present in the applications they write is a key concern for software developers. A
