--- a/CSRelatedWork.tex
+++ b/CSRelatedWork.tex
@@ -1,3 +1,4 @@
+% TODO: Flesh this out a __LOT__ MORE
 \section{Related Work}
 
 CrashSimulator's trace analysis engine is based on NetCheck. NetCheck uses two strategies
