Add TODOs for tables

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -21,6 +21,7 @@
             tested against two sample programs that were seeded with specific counts of potential anomalies. The two sample
             programs were seeded as follows:
 
+            % TODO: Make this look correct
             \begin{tabular}{l  l  l  l}
                 \toprule{}
                     Title & Return Value Modification & Catalog Based & Data Fragmentation \\
@@ -42,6 +43,7 @@
             CrashSimulator will potentially execute the application under test \emph{thousands} of times, it is not
             appropriate to compare test run times to the run time of a single run of the application.
 
+            % TODO: Make this look correct
             \begin{tabular} {l  l  l}
                 \toprule{}
                 This Table Consists Entirely of \textbf{FAKE DATA} \\
@@ -98,6 +100,7 @@
                 \emph{without} CrashSimulator.  The following table contains the total execution times required to
                 complete the listed number of executions.
 
+                % TODO: Make this look correct
                 \begin{tabular}{l l l}
                     \toprule{}
                     Title & Number Of Executions & Execution Time \\
@@ -159,6 +162,7 @@
                 described above. As such, some run time accumulated is the result of non-Apache client code and control
                 script overhead. The following table contains the results collected.
 
+                % TODO: Make this look correct
                 \begin{tabular}{l l l}
                     \toprule{}
                     Title & Number Of Executions & Execution Time \\
