Made tables fit into columns
Resized tables by decreasing font size. Forced tables to appear in text by enabling the floats package

--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -65,6 +65,8 @@
 \documentclass[conference]{IEEEtran}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{tabu}
+\usepackage{float}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
