--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -21,14 +21,16 @@
             tested against two sample programs that were seeded with specific counts of potential anomalies. The two sample
             programs were seeded as follows:
 
-            % TODO: Make this look correct
-            \begin{tabular}{l  l  l  l}
-                \toprule{}
-                    Title & Return Value Modification & Catalog Based & Data Fragmentation \\
-                    Sample A & 20 & 2 & 2 \\
-                    Sample B & 100 & 20 & 20 \\
-                \bottomrule{}
-            \end{tabular}
+            \begin{table}[H]
+                \scriptsize{}
+                \begin{tabular}{l  l  l  l}
+                    \toprule{}
+                        Title & Return Value Modification & Catalog Based & Data Fragmentation \\
+                        Sample A & 20 & 2 & 2 \\
+                        Sample B & 100 & 20 & 20 \\
+                    \bottomrule{}
+                \end{tabular}
+            \end{table}
 
             These sample applications were written with two goals in mind. First, their system call related behavior
             should be deterministic and repeatable in nature. Second, they should be able to run to completion without
@@ -43,17 +45,19 @@
             CrashSimulator will potentially execute the application under test \emph{thousands} of times, it is not
             appropriate to compare test run times to the run time of a single run of the application.
 
-            % TODO: Make this look correct
-            \begin{tabular} {l  l  l}
-                \toprule{}
-                This Table Consists Entirely of \textbf{FAKE DATA} \\
-                Title & Number of Executions & Run Time \\
-                Sample A (No CrashSimulator Tests) & 10000 & 1m 50s \\
-                Sample B (No CrashSimulator Tests) & 10000 & 2m 30s \\
-                Sample A (CrashSimulator) & 10000 & 2m 13s \\
-                Sample B (CrashSimulator) & 10000 & 3m 15s \\
-                \bottomrule{}
-            \end{tabular}
+            \begin{table}[H]
+                \scriptsize{}
+                \begin{tabular} {l  l  l}
+                    \toprule{}
+                    This Table Consists Entirely of \textbf{FAKE DATA} \\
+                    Title & Number of Executions & Run Time \\
+                    Sample A (No CrashSimulator Tests) & 10000 & 1m 50s \\
+                    Sample B (No CrashSimulator Tests) & 10000 & 2m 30s \\
+                    Sample A (CrashSimulator) & 10000 & 2m 13s \\
+                    Sample B (CrashSimulator) & 10000 & 3m 15s \\
+                    \bottomrule{}
+                \end{tabular}
+            \end{table}
 
             As expected, CrashSimulator is responsible for adding some overhead as compared to the non-CrashSimulator
             executions of the sample applications. For each sample program, a group of executions through CrashSimulator
@@ -100,20 +104,22 @@
                 \emph{without} CrashSimulator.  The following table contains the total execution times required to
                 complete the listed number of executions.
 
-                % TODO: Make this look correct
-                \begin{tabular}{l l l}
-                    \toprule{}
-                    Title & Number Of Executions & Execution Time \\
-                    \multirow{3}{*}{Firefox} \\
-                    & 1 & 300ms \\
-                    & 10 & 3000ms \\
-                    & 100 & 30000ms \\
-                    \multirow{3}{*}{Firefox (CrashSimulator)} \\
-                    & 1 & 450ms \\
-                    & 10 & 4500ms \\
-                    & 100 & 45000ms \\
-                    \bottomrule{}
-                \end{tabular}
+                \begin{table}[H]
+                    \scriptsize{}
+                    \begin{tabular}{l l l}
+                        \toprule{}
+                        Title & Number Of Executions & Execution Time \\
+                        \multirow{3}{*}{Firefox} \\
+                        & 1 & 300ms \\
+                        & 10 & 3000ms \\
+                        & 100 & 30000ms \\
+                        \multirow{3}{*}{Firefox (CrashSimulator)} \\
+                        & 1 & 450ms \\
+                        & 10 & 4500ms \\
+                        & 100 & 45000ms \\
+                        \bottomrule{}
+                    \end{tabular}
+                \end{table}
 
                 From these results it is apparent that CrashSimulator  increased the time required to complete a given
                 number of executions of the modified version of Firefox. The results above show an approximately 50
@@ -162,20 +168,22 @@
                 described above. As such, some run time accumulated is the result of non-Apache client code and control
                 script overhead. The following table contains the results collected.
 
-                % TODO: Make this look correct
-                \begin{tabular}{l l l}
-                    \toprule{}
-                    Title & Number Of Executions & Execution Time \\
-                    \multirow{3}{*}{Apache Control Script} \\
-                    & 1 & 300ms \\
-                    & 10 & 3000ms \\
-                    & 100 & 30000ms \\
-                    \multirow{3}{*}{Apache Control Script (CrashSimulator)} \\
-                    & 1 & 450ms \\
-                    & 10 & 4500ms \\
-                    & 100 & 45000ms \\
-                    \bottomrule{}
-                \end{tabular}
+                \begin{table}[H]
+                    \scriptsize{}
+                    \begin{tabular}{l l l}
+                        \toprule{}
+                        Title & Number Of Executions & Execution Time \\
+                        \multirow{3}{*}{Apache Control Script} \\
+                        & 1 & 300ms \\
+                        & 10 & 3000ms \\
+                        & 100 & 30000ms \\
+                        \multirow{3}{*}{Apache Control Script (CrashSimulator)} \\
+                        & 1 & 450ms \\
+                        & 10 & 4500ms \\
+                        & 100 & 45000ms \\
+                        \bottomrule{}
+                    \end{tabular}
+                \end{table}
 
                 As expected, the run times of the CrashSimulator-involved executions shows an increase over the
                 non-CrashSimulator executions. The results above show an approximately 50 percent increase in run time
