--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -1,39 +1,41 @@
-% TODO: Re-read and rework
 \section{Introduction}
-% no \IEEEPARstart
 
     One major hurdle in developing robust applications is anticipating and dealing with edge conditions and faults that
     compromise and applications ability to run as intended. A common source of faults is the environment in which an
-    application runs. The typical approach to eliminating faults in an application is the creation of a suite of tests that
-    exercise the applications functionality and ensure that it always acts appropriately. In the case of issues that arise
-    from an application's environment it is not possible to enumerate and test for an acceptable amount of faults due to the
-    variety of hardware and software systems that make up the environment.
+    application runs. In an increasingly diverse software ecosystem it is not uncommon for breaking differences to
+    appear between two different platforms. Whether it happens because of a lack of adherence to standards, intentional
+    divergence, or developer error the result is the same: software written to run on multiple platforms falls victim to
+    the differences between those platforms. These can easily go unnoticed due to the infeasibility of testing software
+    across every combination of hardware and software on which it is expected to run. The typical approach to
+    eliminating faults of any kind in an application is the creation of a suite of tests that exercise the applications
+    functionality and ensure that it always acts appropriately. In the case of issues that arise from an application's
+    environment it is not possible to enumerate and test for an acceptable amount of faults due to the variety of
+    hardware and software systems that can make up the environment.
 
     This problem is of particular concern in the context of today's highly network dependent applications. With the
     explosion of mobile computing and software as a service products applications that are completely reliant on
     well-behaved network communication are increasingly common. As a result a great deal of emphasis must be placed on
-    properly dealing with faults in these network communications. Unfortunately, identifying these faults is difficult due
-    to the inability of the developer to replicate all possible application environments and exhaust all possible code
-    paths.
+    properly dealing with faults in these network communications. Unfortunately, identifying these faults is difficult
+    due to the inability of the developer to replicate all possible application environments and exhaust all possible
+    code paths.
 
-    Existing white-box testing tools like DART and SAGE testing tools rely on static analysis and symbolic execution of
-    code in order to determine sets of inputs that exercise particular code paths. DART symbolically executes an
-    applications source code in order to facilitate its testing. This limits DART to operating only on programs written
-    in C. SAGE improves on this strategy symbolically executing an application's x86 machine code instructions but this
-    results in an architecture based rather than programming language based limitation. CrashSimulator avoids these
-    issues by relying on transparent observation of native execution of an application.
+    \emph{This may belong in Background and Motivation} Existing white-box testing tools like DART and SAGE testing
+    tools rely on static analysis and symbolic execution of code in order to determine sets of inputs that exercise
+    particular code paths. DART symbolically executes an applications source code in order to facilitate its testing.
+    This limits DART to operating only on programs written in C. SAGE improves on this strategy symbolically executing
+    an application's x86 machine code instructions but this results in an architecture based rather than programming
+    language based limitation. CrashSimulator avoids these issues by relying on transparent observation of native
+    execution of an application.
 
-    %% Does this need to be here? Am I just arguing against static analysis???
-    Symbolic execution is computationally expensive and can result in deviations where the symbolic execution of code
-    Doesn't accurately represent the actual execution of code.
-    %% Is this a true sentence??
-    Both tools focus on how the application under test behaves when given a particular set of inputs without taking the
-    program's environment into account. DART assumes that external functions are side effect free (I.e.\ their execution
-    does not modify program memory). Alternatively, CrashSimulator executes standard, non-instrumented versions of an
-    application and transparently injects faults via the programs interaction with the environment in which it is
-    running through system calls.
+    \emph{Does this need to be here? Am I just arguing against static analysis???} Symbolic execution is computationally
+    expensive and can result in deviations where the symbolic execution of code Doesn't accurately represent the actual
+    execution of code. \emph{Is this a true sentence??} Both tools focus on how the application under test behaves when
+    given a particular set of inputs without taking the program's environment into account. DART assumes that external
+    functions are side effect free (I.e.\ their execution does not modify program memory). Alternatively, CrashSimulator
+    executes standard, non-instrumented versions of an application and transparently injects faults via the programs
+    interaction with the environment in which it is running through system calls.
 
-    %%% Need examples of black-box testing tools
+    % TODO: Need examples of black-box testing tools
     The alternative, black-box tools, have their own set of issues. They do not have an understanding of what an
     application is actually doing during execution which means they are only able to submit inputs and observe outputs.
     They cannot identify specifically the source of faults in an application.
