Fixed syntax error

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -258,7 +258,7 @@
             likeliness to be identified. In addition, CrashSimulator also identified a previously unreported bug in
             Firefox's network code. This bug results in a denial of service condition caused by a failure to check the
             return value of a call to \emph{socket} and the subsequent use of the invalid socket handle it can produce.
-            This bug was reported to Mozilla (bug ID# 0011) and was corrected in the next release of Firefox.
+            This bug was reported to Mozilla (bug ID\# 0011) and was corrected in the next release of Firefox.
 
         % TODO: complete
         \subsection{Apache 2}
